@@ -1,3 +1,8 @@
+2007-07-20  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/__init__.py: Block SIGSTP so we don't hang
+	the desktop, thank you Simos Xenitellis (bug 457965).
+
 2007-07-08  Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/interface_view.glade: Marked 'C' string as untranslatable.
